--- a/css/style.css
+++ b/css/style.css
@@ -10,22 +10,17 @@ body {
   bottom: 0px;
   background-color: rgba(248, 248, 247, 0.555);
 }
+
 .navbar-container__gradiente {
   /* GRADIENTE */
   background: #240b36;
-  background: linear-gradient(
-    90deg,
-    #000000 8%,
-    #969696 25%,
-    #e7e7e7 45%,
-    #ff0066 65%,
-    #b30059 85%
-  );
+  background: linear-gradient(90deg, #000000 8%, #969696 25%, #e7e7e7 45%, #ff0066 65%, #b30059 85%);
 }
 
 .logo {
   color: #ff0066;
 }
+
 .navbar-container__logo {
   width: 100%;
   height: 100%;
@@ -42,18 +37,21 @@ body {
 .navbar-dark :hover {
   color: rgba(0, 0, 0, 0.993) !important;
 }
+
 .logo:hover {
-  color: rgb(255, 255, 255) !important;
+  color: white !important;
 }
 
 .nav-link:hover {
   font-style: italic;
 }
+
 .main {
   margin-top: 90px;
   padding: 20px;
   height: 85vh;
 }
+
 .section__titulo {
   color: #a8135e;
   text-align: center;
@@ -65,6 +63,7 @@ body {
 .section__titulo--variante {
   text-transform: uppercase;
 }
+
 .tabla {
   background-color: #fd477ef5;
   text-align: center;
@@ -85,6 +84,7 @@ body {
   background-color: #fa436b;
   color: whitesmoke;
 }
+
 .footer {
   background-color: #000000;
   display: flex;
