--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -9,4 +9,6 @@ body {
     top: 0px;
     bottom: 0px;
     background-color: rgba(248, 248, 247, 0.555);
+    min-height: 100vh;
+    padding-bottom: 90px;
 }
