--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,7 +3,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    bottom: 0;
     height: 80px;
+width: 100%;
 }
 
 .footer__autor {
