agregado de estilos y funcionalidad optima

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,12 @@ body {
   text-transform: uppercase;
 }
 
+.section__titulo--variante-categorias {
+  font-size: 150%;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+}
+
 .error__formulario {
   display: none;
 }
