--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -15,3 +15,8 @@
 .section__titulo--variante {
     text-transform: uppercase;
 }
+.section__titulo--variante-categorias {
+    font-size: 150%;
+    letter-spacing: 10px;
+    text-transform: uppercase;
+}
