--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -9,12 +9,12 @@
 width: 100%;
 }
 
-.footer__autor {
-    color: white;
-    padding-bottom: 10px;
-}
-
 .footer ul {
     margin-bottom: 0px;
     padding-left: 0px;
+}
+
+.footer__autor {
+    color: white;
+    padding-bottom: 1rem;
 }
