--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -5,7 +5,7 @@
 }
 
 .section__titulo {
-    color: #a8135e;
+    color: #03274c;
     text-align: center;
     letter-spacing: 20px;
     font-size: 200%;
